--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.4",
+    "ethers": "^5.6.9",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
